# rocketmq-clients

./: .gitignore
cpp/v2/: CMakeLists.txt  CPushConsumer.c  CSimpleProducer.c  README.md  SyncProducer.cpp  common.h  main.cpp
cpp/v2/src/: CPushConsumer.c  CSimpleProducer.c
golang/v2/: README.md  go.mod  go.sum
golang/v2/consumer/: consumer_v2.go
golang/v2/producer/: producer_v2.go
golang/v5/: go.mod  go.sum
golang/v5/consumer/: consumer_v5.go
golang/v5/producer/: producer_v5.go
python/v2/: README.md
python/v2/consumer/: consumer.py
python/v2/producer/: producer.py
python/v5/: normal_consumer.py  normal_producer.py  setup.py
rust/all/: Cargo.toml  README.md
rust/all/examples/: simple_consumer.rs  simple_producer.rs
rust/v2/: Cargo.toml
rust/v2/examples/: simple_producer.rs
rust/v5/: Cargo.toml
rust/v5/examples/: simple_consumer.rs  simple_producer.rs
rust/v5/src/: main.rs
